--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -7,6 +7,7 @@
   background-color: #4A44F2;
   justify-content: flex-start;
   align-items: center;
+  height: 83px;
 }
 
 .navbar>p {
@@ -16,26 +17,33 @@
 
 .navbar-collapse {
   background-color: #4A44F2;
-        position: absolute;
-        top: 54px;
-        left: 0;
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-bottom: 15px;
-        width: 100%;
+  position: absolute;
+  top: 54px;
+  left: 0;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 15px;
+  width: 100%;
 }
+
 .navbar-collapse.collapsing {
-    height: auto;
-    -webkit-transition: left 0.3s ease;
-    -o-transition: left 0.3s ease;
-    -moz-transition: left 0.3s ease;
-    transition: left 0.3s ease;
-    left: -100%;
+  height: 100vh;
+  width: 35vh;
+  top: 82px;
+  -webkit-transition: left 0.3s ease;
+  -o-transition: left 0.3s ease;
+  -moz-transition: left 0.3s ease;
+  transition: left 0.3s ease;
+  left: -100%;
 }
+
 .navbar-collapse.show {
-    left: 0;
-    -webkit-transition: left 0.3s ease-in;
-    -o-transition: left 0.3s ease-in;
-    -moz-transition: left 0.3s ease-in;
-    transition: left 0.3s ease-in;
+  height: 100vh;
+  width: 35vh;
+  left: 0;
+  top: 82px;
+  -webkit-transition: left 0.3s ease-in;
+  -o-transition: left 0.3s ease-in;
+  -moz-transition: left 0.3s ease-in;
+  transition: left 0.3s ease-in;
 }
