--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -7,12 +7,15 @@ body {
     sans-serif;
 
   h1 {
-    margin-top: 32px;
+    font-size: 2em;
     color: #FFF;
+    margin-bottom: 32px;
   }
 }
 
 main {
+  position: relative;
   width: 90%;
   margin: 0 auto;
+  top: 100px;
 }
