--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -63,6 +63,7 @@ i.fas.fa-times.close {
   position: fixed;
   bottom: 32px;
   right: 32px;
+  opacity: 1;
   background: #F2BE22;
   border: none;
   border-radius: 100px;
@@ -100,4 +101,8 @@ i.fas.fa-times.close {
 #ui-datepicker-div {
   z-index: 1032 !important;
   font-family: 'Cabin', sans-serif;
+}
+
+.modal-footer {
+  border-top: none;
 }
