--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -68,3 +68,23 @@
 hr {
   border-top: 1px solid rgba(255, 255, 255, .75);
 }
+
+@media (min-width: 992px) {
+  .navbar-collapse {
+    top: 82px;
+    height: 64px;
+  }
+
+  .navbar-nav.mr-auto {
+    margin-top: 0;
+    margin-right: 0 !important;
+  }
+
+  hr {
+    border: none;
+  }
+
+  article.task {
+    max-width: 80%;
+  }
+}
