--- a/styles/task.scss
+++ b/styles/task.scss
@@ -2,15 +2,12 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 125px;
+  color: #4c4c4c;
 
   .task {
     height: 10%;
     margin-bottom: 1%;
     background-color: #ffffff;
-
-    h3 {
-      color: #5300a3;
-    }
   }
 
   .row {
