more responsive styles

--- a/styles/task.scss
+++ b/styles/task.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 125px;
-  color: #4c4c4c;
+  color: #484848;
 
   .task {
     height: 10%;
