--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,7 +1,7 @@
 // See: https://sass-lang.com/
 
 body {
-  background-color: #4c4c4c;
+  background-color: #fff;
 
   font-family: 'Cabin',
     sans-serif;
@@ -14,7 +14,7 @@ body {
 
     h1 {
       font-size: 2em;
-      color: #FFF;
+      color: #4c4c4c;
       margin-bottom: 32px;
     }
   }
