Allow sending schedule date to SQL
- fixed priority update failing

--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -86,7 +86,7 @@ i.fas.fa-times.close {
   height: 20px;
 }
 
-// #ui-datepicker-div {
-//   z-index: 1032 !important;
-//   font-family: 'Cabin', sans-serif;
-// }
+#ui-datepicker-div {
+  z-index: 1032 !important;
+  font-family: 'Cabin', sans-serif;
+}
