--- a/styles/task.scss
+++ b/styles/task.scss
@@ -4,12 +4,11 @@ $FADE_TIME: 1s;
 .task-list {
   display: flex;
   flex-direction: column;
-  margin-bottom: 125px;
   color: #484848;
 
 
   transition: $SLIDEOUT_TIME;
-  transition-timing-function: cubic-bezier(.48,0,.07,1);
+  transition-timing-function: cubic-bezier(.48, 0, .07, 1);
 
   .task-name {
     font-size: 1.2em;
@@ -18,12 +17,12 @@ $FADE_TIME: 1s;
   .task {
     height: 10%;
     margin-bottom: 1%;
-    background-color: hsl(211, 100%, 50%);
+    background-color: #323232;
     color: #fff;
 
 
     transition: $SLIDEOUT_TIME;
-    transition-timing-function: cubic-bezier(.48,0,.07,1);
+    transition-timing-function: cubic-bezier(.48, 0, .07, 1);
 
     &.completed {
       background-color: hsl(211, 50%, 75%);
