--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -4,14 +4,14 @@ body {
   width: 100%;
   height: 100%;
 
-  &.movie-background {
+  &.all-background {
     width: 100%;
-    height: 100px;
+    height: 100%;
   }
 
-  &.movie-background::after {
+  &.all-background::after {
     content: "";
-    background-image: url('../img/movie_bg.jpg');
+    background-image: url('../img/all_bg.jpg');
     background-size: cover;
     background-repeat: repeat;
     opacity: 0.60;
@@ -23,22 +23,6 @@ body {
     z-index: -1;
     height: 100vh;
   }
-
-  &.movie-background::after {
-    content: "";
-    background-image: url('../img/movie_bg.jpg');
-    background-size: cover;
-    background-repeat: repeat;
-    opacity: 0.60;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
-    height: 100vh;
-  }
-
 
   font-family: 'Cabin',
   sans-serif;
@@ -54,7 +38,7 @@ body {
 
   h1 {
     font-size: 2em;
-    color: #FFF;
+    color: #323232;
     margin-top: 32px;
     margin-bottom: 32px;
   }
