add margin bottom to tasks list

--- a/styles/task.scss
+++ b/styles/task.scss
@@ -5,6 +5,7 @@ $FADE_TIME: 1s;
   display: flex;
   flex-direction: column;
   color: #484848;
+  margin-bottom: 150px;
 
 
   transition: $SLIDEOUT_TIME;
