--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -10,6 +10,13 @@
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
+
+
+  .btn-lg {
+    margin-top: 32px;
+  }
+
+
 }
 
 .modal-backdrop {
